@@ -9,10 +9,13 @@ INCLUDES= -I$(top_srcdir)/gwenhywfar2 \
 
 SUBDIRS = base crypt io ipc os parser crypt2 net2
 
+localedir=$(datadir)/locale
 DEFS += \
-  -DGWEN_INSTALL_DIR=\"$(prefix)\" \
   -DGWEN_EFFECTIVE_VERSTR=\"${GWENHYWFAR_SO_EFFECTIVE}\" \
-  -DGWEN_SYSCONF_DIR=\"$(sysconfdir)\"
+  -DGWEN_PREFIX_DIR=\"$(prefix)\" \
+  -DGWEN_SYSCONF_DIR=\"$(sysconfdir)\" \
+  -DLOCALEDIR=\"$(localedir)\" \
+  -DLIBDIR=\"$(libdir)\"
 
 
 EXTRA_DIST=\
